--- a/index.html
+++ b/index.html
@@ -1,83 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LHS RESOURCES</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Dark Feed Layout</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      background-color: #121212; /* Dark background */
+      color: #e0e0e0;
+    }
+    .navbar, .sidebar {
+      background-color: #1e1e1e;
+    }
+    .accent {
+      color: turquoise !important;
+    }
+    .feed {
+      height: calc(100vh - 56px); /* Full height minus navbar */
+      overflow-y: auto;
+    }
+    .post {
+      background-color: #1c1c1c;
+      border-radius: 12px;
+      padding: 1rem;
+      margin-bottom: 1.5rem;
+    }
+    .post img {
+      border-radius: 8px;
+      margin-top: 0.5rem;
+    }
+    a {
+      color: turquoise;
+      text-decoration: none;
+    }
+    a:hover {
+      color: #40e0d0;
+    }
+  </style>
 </head>
-<body class="bg-gray-100 h-screen flex flex-col">
+<body>
 
   <!-- Top Navbar -->
-  <nav class="bg-white shadow-md fixed top-0 left-0 w-full z-10">
-    <div class="max-w-7xl mx-auto px-4 py-3 flex justify-between items-center">
-      <h1 class="text-xl font-bold">MySite</h1>
-      <ul class="flex gap-6">
-        <li><a href="#" class="hover:text-blue-500">Home</a></li>
-        <li><a href="#" class="hover:text-blue-500">Explore</a></li>
-        <li><a href="#" class="hover:text-blue-500">Profile</a></li>
-      </ul>
-    </div>
+  <nav class="navbar navbar-dark px-3 shadow-sm fixed-top">
+    <a class="navbar-brand accent fw-bold" href="#">MySite</a>
+    <ul class="navbar-nav flex-row gap-3">
+      <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+      <li class="nav-item"><a href="#" class="nav-link">Explore</a></li>
+      <li class="nav-item"><a href="#" class="nav-link">Profile</a></li>
+    </ul>
   </nav>
 
-  <!-- Main Layout -->
-  <div class="flex flex-1 pt-16"> <!-- pt-16 offsets navbar height -->
+  <!-- Layout -->
+  <div class="container-fluid" style="padding-top: 56px;">
+    <div class="row">
 
-    <!-- Left Sidebar -->
-    <aside class="hidden md:block w-64 bg-white shadow-md p-4">
-      <h2 class="text-lg font-semibold mb-4">Menu</h2>
-      <ul class="space-y-2">
-        <li><a href="#" class="block p-2 rounded hover:bg-gray-100">Dashboard</a></li>
-        <li><a href="#" class="block p-2 rounded hover:bg-gray-100">Messages</a></li>
-        <li><a href="#" class="block p-2 rounded hover:bg-gray-100">Settings</a></li>
-      </ul>
-    </aside>
-
-    <!-- Feed -->
-    <main class="flex-1 flex justify-center bg-gray-50">
-      <div class="w-full max-w-xl h-[calc(100vh-4rem)] overflow-y-auto p-4">
-        
-        <!-- Example Post -->
-        <div class="bg-white rounded-xl shadow mb-6">
-          <div class="p-4 flex items-center gap-3">
-            <img src="https://placekitten.com/50/50" class="rounded-full w-10 h-10" alt="user" />
-            <span class="font-semibold">user123</span>
-          </div>
-          <img src="https://placekitten.com/600/400" class="w-full" alt="post" />
-          <div class="p-4">
-            <p><span class="font-semibold">user123</span> enjoying the view 🌄</p>
-          </div>
-        </div>
-
-        <!-- More posts -->
-        <div class="bg-white rounded-xl shadow mb-6">
-          <div class="p-4 flex items-center gap-3">
-            <img src="https://placekitten.com/51/51" class="rounded-full w-10 h-10" alt="user" />
-            <span class="font-semibold">catlover</span>
-          </div>
-          <img src="https://placekitten.com/601/400" class="w-full" alt="post" />
-          <div class="p-4">
-            <p><span class="font-semibold">catlover</span> hanging out 🐾</p>
-          </div>
-        </div>
-
+      <!-- Left Sidebar -->
+      <div class="col-md-2 d-none d-md-block sidebar p-3">
+        <h5 class="accent">Menu</h5>
+        <ul class="nav flex-column mt-3">
+          <li class="nav-item"><a href="#" class="nav-link">Dashboard</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Messages</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Settings</a></li>
+        </ul>
       </div>
-    </main>
 
-    <!-- Right Sidebar -->
-    <aside class="hidden lg:block w-72 bg-white shadow-md p-4">
-      <h2 class="text-lg font-semibold mb-4">Suggestions</h2>
-      <ul class="space-y-3">
-        <li class="flex items-center gap-3">
-          <img src="https://placekitten.com/40/40" class="w-8 h-8 rounded-full" alt="suggestion" />
-          <span class="text-sm">cool_user</span>
-        </li>
-        <li class="flex items-center gap-3">
-          <img src="https://placekitten.com/41/41" class="w-8 h-8 rounded-full" alt="suggestion" />
-          <span class="text-sm">naturefan</span>
-        </li>
-      </ul>
-    </aside>
+      <!-- Feed -->
+      <main class="col-md-8 col-lg-6 mx-auto feed p-3">
+        <!-- Post -->
+        <div class="post shadow">
+          <div class="d-flex align-items-center mb-2">
+            <img src="https://placekitten.com/50/50" class="rounded-circle me-2" width="40" height="40" alt="user">
+            <span class="fw-semibold">user123</span>
+          </div>
+          <img src="https://placekitten.com/600/400" class="img-fluid" alt="post">
+          <p class="mt-2"><span class="fw-semibold">user123</span> enjoying the view 🌄</p>
+        </div>
+
+        <!-- Another Post -->
+        <div class="post shadow">
+          <div class="d-flex align-items-center mb-2">
+            <img src="https://placekitten.com/51/51" class="rounded-circle me-2" width="40" height="40" alt="user">
+            <span class="fw-semibold">catlover</span>
+          </div>
+          <img src="https://placekitten.com/601/400" class="img-fluid" alt="post">
+          <p class="mt-2"><span class="fw-semibold">catlover</span> hanging out 🐾</p>
+        </div>
+      </main>
+
+      <!-- Right Sidebar -->
+      <div class="col-lg-4 d-none d-lg-block sidebar p-3">
+        <h5 class="accent">Suggestions</h5>
+        <ul class="list-unstyled mt-3">
+          <li class="d-flex align-items-center mb-3">
+            <img src="https://placekitten.com/40/40" class="rounded-circle me-2" alt="suggestion">
+            <span>cool_user</span>
+          </li>
+          <li class="d-flex align-items-center mb-3">
+            <img src="https://placekitten.com/41/41" class="rounded-circle me-2" alt="suggestion">
+            <span>naturefan</span>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
+
 </body>
 </html>
