vibe coding and plagiarism at the same time is crazy, I definitely didn't use chatgpt to copy lhs connect with tailwind ;) sorry tyler, sorry avi

--- a/index.html
+++ b/index.html
@@ -86,6 +86,42 @@
           <img src="https://placekitten.com/601/400" class="img-fluid" alt="post">
           <p class="mt-2"><span class="fw-semibold">catlover</span> hanging out 🐾</p>
         </div>
+        <div class="post shadow">
+          <div class="d-flex align-items-center mb-2">
+            <img src="https://placekitten.com/50/50" class="rounded-circle me-2" width="40" height="40" alt="user">
+            <span class="fw-semibold">user123</span>
+          </div>
+          <img src="https://placekitten.com/600/400" class="img-fluid" alt="post">
+          <p class="mt-2"><span class="fw-semibold">user123</span> enjoying the view 🌄</p>
+        </div>
+
+        <!-- Another Post -->
+        <div class="post shadow">
+          <div class="d-flex align-items-center mb-2">
+            <img src="https://placekitten.com/51/51" class="rounded-circle me-2" width="40" height="40" alt="user">
+            <span class="fw-semibold">catlover</span>
+          </div>
+          <img src="https://placekitten.com/601/400" class="img-fluid" alt="post">
+          <p class="mt-2"><span class="fw-semibold">catlover</span> hanging out 🐾</p>
+        </div>
+        <div class="post shadow">
+          <div class="d-flex align-items-center mb-2">
+            <img src="https://placekitten.com/50/50" class="rounded-circle me-2" width="40" height="40" alt="user">
+            <span class="fw-semibold">user123</span>
+          </div>
+          <img src="https://placekitten.com/600/400" class="img-fluid" alt="post">
+          <p class="mt-2"><span class="fw-semibold">user123</span> enjoying the view 🌄</p>
+        </div>
+
+        <!-- Another Post -->
+        <div class="post shadow">
+          <div class="d-flex align-items-center mb-2">
+            <img src="https://placekitten.com/51/51" class="rounded-circle me-2" width="40" height="40" alt="user">
+            <span class="fw-semibold">catlover</span>
+          </div>
+          <img src="https://placekitten.com/601/400" class="img-fluid" alt="post">
+          <p class="mt-2"><span class="fw-semibold">catlover</span> hanging out 🐾</p>
+        </div>
       </main>
 
       <!-- Right Sidebar -->
