--- a/index.html
+++ b/index.html
@@ -8,17 +8,22 @@
     </head>
     <body class="body">
       <div class="flexbox">
+        <div onclick="openlink('https://google.com');" class="navbar items">
+          <H2> Google </H2>
+        </div>
+      </div>
+      <div class="flexbox">
         <H1>Hello There</H1>
       </div>
       <div class="flexbox">
         <div class="items">
-          <p> 1 </p>
+          <p> I love hyper-text markup language so much it is my lord and savior yada yada yooooooo.</p>
         </div>
         <div class="items">
-          <p> 2 </p>
+          <p> I love cascading style sheets they are so fire, they make everything look so so so good.</p>
         </div>
         <div class="items">
-          <p> 3 </p>
+          <p> I love javascript </p>
         </div>
       </div>
     </body>
