--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <p> I love cascading style sheets they are so fire, they make everything look so so so good.</p>
         </div>
         <div class="items">
-          <p> I love javascript </p>
+          <p> I love javascript it loves me, we're a happy family. It makes my life super duper truper quadruper quintuper hextuper septuper octuper novuper easy!</p>
         </div>
       </div>
     </body>
