--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
       </div>
       <div class="flexbox">
         <div class="items">
-          <p> I love hyper-text markup language so much it is my lord and savior yada yada yooooooo.</p>
+          <h3>LHS NEWS</h3>
+          <button onclick="https://lhs.elliott.ca">Click to Visit!</button>
+          <p>I noticed that my school had no reliable sources of information other than instagram. The issue is some of my friends don't have instagram and the information is all over the place so I made an aggregator website with instagram embeds.</p>
         </div>
         <div class="items">
           <p> I love cascading style sheets they are so fire, they make everything look so so so good.</p>
